MDEV-25410 Assertion `state_ == s_exec' failed - mysqld got signal 6

Victim threads which are in currently in process of aborting or already
aborted should be skipped for another kill process.

Reviewed-by: Jan Lindström <jan.lindstrom@mariadb.com>